--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 axum = { version = "0.8.4", features = ["json"] }
 bincode = "2.0.1"
-chrono = "0.4.41"
+chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.38", features = ["derive"] }
 futures = "0.3.31"
 futures-core = "0.3.31"
@@ -17,6 +18,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_derive = "1.0.219"
 serde_json = "1.0.140"
 serde_yaml = { version = "0.9.34", optional = true }
+thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["full", "signal", "rt-multi-thread", "sync", "time", "macros", "rt"] }
 tonic = { version = "0.13.1", features = ["transport"] }
 tracing = "0.1.41"
@@ -27,3 +29,6 @@ proptest = "1.6.0"
 
 [build-dependencies]
 tonic-build = "0.13.1"
+
+[features]
+serde_yaml = ["dep:serde_yaml"]
