--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-trait = "0.1.88"
 anyhow = "1.0.98"
 axum = { version = "0.8.4", features = ["json"] }
 bincode = "2.0.1"
@@ -23,6 +24,7 @@ tokio = { version = "1.45.0", features = ["full", "signal", "rt-multi-thread", "
 tonic = { version = "0.13.1", features = ["transport"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+num_cpus = "1.16.0"
 
 [dev-dependencies]
 proptest = "1.6.0"
@@ -31,4 +33,5 @@ proptest = "1.6.0"
 tonic-build = "0.13.1"
 
 [features]
+default = ["serde_yaml"]
 serde_yaml = ["dep:serde_yaml"]
